# Center-Morse-Skeleton

./: .gitignore  CMakeLists.txt  dataset.py  debug_dmtskeleton.ipynb  evaluation.py  loss_function.py  pybind.ipynb  readme.md  requirements.txt  results.ipynb  skel2graph.py  train.py  util.py
canceling_pairs/synthetic_blob_data_holes/: run_canceling.sh
canceling_pairs/topcow_mr/: run_canceling.sh
cldice_loss/: cldice.py
config/: MRBrainS_config.yaml  MRBrainS_dataconfig.yaml  cremi_config.yaml  cremi_dataconfig.yaml  platelet_config.yaml  platelet_dataconfig.yaml  synthetic_config.yaml  synthetic_dataconfig.yaml  topcow_ct_config.yaml  topcow_ct_dataconfig.yaml  topcow_mr_config.yaml  topcow_mr_dataconfig.yaml
metrics/: betti_error.py  betti_matching.py  cldice.py  rand.py  voi.py
morse_skeleton/: 2D-skeleta.ipynb  __init__.py  dmtskeletonize.py  synthetic_blobs.ipynb  topcow_ct.ipynb  topcow_mr.ipynb
previous_skeleton/: __init__.py  mentenskeletonize.py  shitskeletonize.py  skeleton_demo.ipynb  vitiskeletonize.py
src/: cancel_pairs.cpp  config.h  data_structures.cpp  data_structures.h  dmt.cpp  enumerators.cpp  enumerators.h  main.cpp  utils.cpp  utils.h
utils/: functions.py
